--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -8,7 +8,7 @@ application.view.ext    = "html"
 application.dispatcher.catchException = 1
 
 ;project
-application.name        = "财富森林后台管理"
+application.name        = "初始项目"
 
 ;smarty
 smarty.template_dir     = APPLICATION_PATH "/views"
